Various spacing fixes.

--- a/assets/less/mio/classes/news/list.less
+++ b/assets/less/mio/classes/news/list.less
@@ -1,6 +1,4 @@
 .news__list {
-    margin: 0;
-    margin-bottom: 2px;
 
     &__item {
         text-decoration: none;
