--- a/assets/less/mio/classes/news/preview.less
+++ b/assets/less/mio/classes/news/preview.less
@@ -1,9 +1,4 @@
 .news__preview {
-    margin: 0;
-
-    &:not(:last-child) {
-        margin-bottom: 2px;
-    }
 
     &__listing {
         flex-grow: 1;
