--- a/assets/less/mio/main.less
+++ b/assets/less/mio/main.less
@@ -31,10 +31,6 @@ body {
         margin: 0 auto;
         padding: 1px;
         flex: 1 0 auto;
-
-        @media (max-width: @site-max-width + 1) {
-            margin: 0 1px;
-        }
     }
 
     &--dark {
